--- a/public/website/assets/scss/style.css
+++ b/public/website/assets/scss/style.css
@@ -2110,10 +2110,10 @@ input[type=file]::-webkit-file-upload-button {
 .menu-main ul li .link::before {
   content: "";
   position: absolute;
-  bottom: 6px;
+  bottom: -3px !important;
   left: 0;
   width: 0;
-  height: 1px;
+  height: 3px !important;
   background-color: var(--black);
   transition: all ease 0.3s;
 }
