--- a/public/website/assets/css/custom.scss
+++ b/public/website/assets/css/custom.scss
@@ -20,3 +20,65 @@
     display: none;
 
 }
+
+.pt-40{
+    padding-bottom: 40px;
+}
+.pb-70{
+    padding-bottom: 70px;
+}
+
+
+.grid-three-sec-inner{
+    .grid-three-sec-common{
+        .grid-three-sec-block{
+            padding-bottom: 40px;
+            text-align: center;
+            .loader{
+                span{
+
+                    font-size: 150px;
+                    font-weight: 900;
+                   
+                    background-clip: text;
+                    background-image: linear-gradient(121.84deg, #ff7fba 13.8%, #fad6b4 69.15%);
+                    -webkit-text-fill-color: transparent;
+                    text-fill-color: transparent;
+                    -webkit-background-clip: text;
+                }
+            }
+            h3{
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+}
+
+.product_sec {
+    .product-infor{
+text-align: center;
+.product-price-block{
+    justify-content: center;
+    padding: 3px 0px;
+}
+.product-name{
+    padding: 10px 0px;
+    font-size: 22px;
+}
+    }
+    .tax-details{
+        font-size: 14px;
+        padding-top:10px;
+    }
+.cart_btn_wrapper{
+    padding-top: 20px;
+    .cart_btn{
+        background-color: #000;
+        color: #fff;
+        font-size: 14px;
+        padding: 9px 20px;
+        width: 100%;
+    }
+}
+}
