--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -137,7 +137,7 @@
   font-size: 16px;
   font-family: "Bai Jamjuree", Sans-serif;
   padding: 0;
-  color: #222222;
+  color: #ffffff;
   background: none !important;
   width: 90%;
 }
