--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -133,7 +133,7 @@
                     font-size: 16px;
                     font-family: "Bai Jamjuree", Sans-serif;
                     padding: 0;
-                    color:#222222;
+                    color:#ffffff;
                     background: none!important;
                     width:90%;
                     @media (max-width: 769px){
