--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -67,7 +67,7 @@
                             font-size: 15px;
                         }
                         a{
-                            color:#5C9520;
+                            color:#27b24b;
                             transition: transform 0.3s ease, color 0.3s ease;
                             &:hover{
                                 color:#1BAE70;
@@ -75,7 +75,7 @@
                             }
                         }
                         .active{
-                            color:#1BAE70;
+                            color:#0d8d47;
                         }
                     }
                 }
@@ -96,59 +96,59 @@
 //=============HEADER END==========================
     
 //=============BANNER START========================
-.banner{
-    .slides-container{
-        .container{
-            width: 46.958%;
-            margin-left: 10px;
-            @media (max-width: 1181px){
-                width: 60%;
-            }
-            @media (max-width: 769px){
-                width: 70%;
-            }
-            @media (max-width: 426px){
-                width: 100%;
-            }
-            .wrap-caption{
-                margin-top: 70px; 
-                width:100%;
-                @media (max-width: 1181px){
-                    margin-top: 0;
-                }
-                p{
-                    font-size: 25px;
-                    font-family: "Barlow Condensed", sans-serif;
-                }
-                h4{
-                    font-size: 2.857em;
-                    font-family: "Bai Jamjuree", Sans-serif;
-                    color: #5CA904;
-                    line-height: 1.4em;
-                    @media (max-width: 769px){
-                        font-size: 2em;
-                    }
-                }
-                .banner-text{
-                    font-size: 16px;
-                    font-family: "Bai Jamjuree", Sans-serif;
-                    padding: 0;
-                    color:#ffffff;
-                    background: none!important;
-                    width:90%;
-                    @media (max-width: 769px){
-                        font-size: 13px;
-                    }
-                }
-             }
-        }
-    }
-}
+// .banner{
+//     .slides-container{
+//         .container{
+//             width: 46.958%;
+//             margin-left: 10px;
+//             @media (max-width: 1181px){
+//                 width: 60%;
+//             }
+//             @media (max-width: 769px){
+//                 width: 70%;
+//             }
+//             @media (max-width: 426px){
+//                 width: 100%;
+//             }
+//             .wrap-caption{
+//                 margin-top: 70px; 
+//                 width:100%;
+//                 @media (max-width: 1181px){
+//                     margin-top: 0;
+//                 }
+//                 p{
+//                     font-size: 25px;
+//                     font-family: "Barlow Condensed", sans-serif;
+//                 }
+//                 h4{
+//                     font-size: 2.857em;
+//                     font-family: "Bai Jamjuree", Sans-serif;
+//                     color: #5CA904;
+//                     line-height: 1.4em;
+//                     @media (max-width: 769px){
+//                         font-size: 2em;
+//                     }
+//                 }
+//                 .banner-text{
+//                     font-size: 16px;
+//                     font-family: "Bai Jamjuree", Sans-serif;
+//                     padding: 0;
+//                     color:#ffffff;
+//                     background: none!important;
+//                     width:90%;
+//                     @media (max-width: 769px){
+//                         font-size: 13px;
+//                     }
+//                 }
+//              }
+//         }
+//     }
+// }
 //=============BANNER END========================
 
 //=============OPPORTUNITIES START==================
 .opportunities{
-    background-color: #29AB87;
+    background-color: #81c55d;
     text-align: center;
     padding: 40px 20px;
         h2 {
@@ -229,42 +229,41 @@
 //=============OPPORTUNITIES END==================
 
 //=============SERVICE START==================
-.section-border{
-    border-top: 20px solid #03D89D;
-    .container{
-        padding-top: 40px;
-        padding-bottom: 0px;
-        h3{
-            font-size: 35px;
-            font-family: "Bai Jamjuree", sans-serif;
-            margin-bottom: 0px;
-        }
-        .body-content{
-            transition: transform 0.3s ease, color 0.3s ease;
-                &:hover{
-                    transform: scale(1.10);
-                }
-        }
-        .title{
-            font-size: 20px;
-            font-weight: 400;
-            font-family: "Bai Jamjuree", sans-serif;
-            color: #4E5652;
-            &::after{
-                display: none;
-            }
-        }
-        img{
-            padding-top: 40px;
-        }
+// .section-border{
+//     border-top: 20px solid #03D89D;
+//     .container{
+//         padding-top: 40px;
+//         padding-bottom: 0px;
+//         h3{
+//             font-size: 35px;
+//             font-family: "Bai Jamjuree", sans-serif;
+//             margin-bottom: 0px;
+//         }
+//         .body-content{
+//             transition: transform 0.3s ease, color 0.3s ease;
+//                 &:hover{
+//                     transform: scale(1.10);
+//                 }
+//         }
+//         .title{
+//             font-size: 20px;
+//             font-weight: 400;
+//             font-family: "Bai Jamjuree", sans-serif;
+//             color: #4E5652;
+//             &::after{
+//                 display: none;
+//             }
+//         }
+//         img{
+//             padding-top: 40px;
+//         }
 
-    }
-}
+//     }
+// }
 //=============SERVICE END========================
 
 //=============CONTRIBUTION START==================
 .contribution{
-    border-top: 20px solid #03D89D;
     .grid-container {
         gap: 40px;
         flex-wrap: wrap;
@@ -349,7 +348,6 @@
 
 //=============SECTION-CHAIRMAN START=============
 .section-chairman{
-    border-top: 20px solid #03D89D;
     .container{
         margin-bottom: 30px;
         .row{
@@ -400,51 +398,51 @@
 //=============SECTION-CHAIRMAN END=============
 
 //=============FEATURES START===================
-.feature{
-    border-top: 20px solid #03D89D;
-    background: #29AB87; 
-    .container{
-        margin-top: -50px;
-        padding-bottom: 0px;
-        .section-heading{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            background: none;
-            font-family: "Bai Jamjuree", sans-serif;
-            font-size: 28px;
-            @media (max-width: 621px){
-                display: block;
-            }
-            a{
-                color: #ffffff !important;
-                text-transform: capitalize;
-            }
-        }
-        .text{
-            .subheading{
-                background:#29AB87;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-                backdrop-filter: blur(10px);
-                text-align: justify;
-                text-justify: inter-word;
-                padding: 40px 60px 40px 60px;
-                font-family: "Bai Jamjuree", sans-serif;
-                font-size: 16px;
-                color: #ffffff;
-                @media (max-width: 621px){
-                    padding: 10px 20px 10px 20px;
-                    margin:0;
-                    width:100%;
-                }
-                .text2{
-                    margin-top: 30px;
-                    background-color: brown;
-                }
-            }
-        }
-    }
-}
+// .feature{
+//     border-top: 20px solid #03D89D;
+//     background: #29AB87; 
+//     .container{
+//         margin-top: -50px;
+//         padding-bottom: 0px;
+//         .section-heading{
+//             display: flex;
+//             flex-wrap: wrap;
+//             justify-content: space-evenly;
+//             background: none;
+//             font-family: "Bai Jamjuree", sans-serif;
+//             font-size: 28px;
+//             @media (max-width: 621px){
+//                 display: block;
+//             }
+//             a{
+//                 color: #ffffff !important;
+//                 text-transform: capitalize;
+//             }
+//         }
+//         .text{
+//             .subheading{
+//                 background:#29AB87;
+//                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+//                 backdrop-filter: blur(10px);
+//                 text-align: justify;
+//                 text-justify: inter-word;
+//                 padding: 40px 60px 40px 60px;
+//                 font-family: "Bai Jamjuree", sans-serif;
+//                 font-size: 16px;
+//                 color: #ffffff;
+//                 @media (max-width: 621px){
+//                     padding: 10px 20px 10px 20px;
+//                     margin:0;
+//                     width:100%;
+//                 }
+//                 .text2{
+//                     margin-top: 30px;
+//                     background-color: brown;
+//                 }
+//             }
+//         }
+//     }
+// }
 //=============FEATURES END===================
 
 
