--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+p, li, a, h1, h2, h3{
+  font-family: 'Lato', sans-serif !important;
+}
 //============================== VARIABLES ===================================
 :root{
     --black:#000;
@@ -87,46 +91,66 @@
 //========================== HEADER END ====================================
     
 //========================== BANNER START ===================================
-.banner{
-    max-width: 90%;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
-    .slides-container{
-        .bg-video{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto; 
-            height: auto; 
-            transform: translate(-50%, -50%); 
-            z-index: 0; 
-            object-fit: cover;
-        }
-        .container{
-            .wrap-caption{
-                width: 100%;
-                .caption-heading{
-                    span{
-                        background-color: transparent;
-                        font-weight: 100;
-                        font-size: 8rem;
-                        
-                    }
-                }
-            }
-        }
+.hero-banner {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  max-width: 90%;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  .bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2); // Optional: for slight dark overlay
+    z-index: 1;
+  }
+
+  .content {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+
+    h2 {
+      color: #fff;
+      font-family: "Lato", sans-serif;
+      font-size: 80px;
+      font-weight: 300;
+      padding: 0 1rem;
+      max-width: 90%;
+      @media (max-width: 768px){
+        font-size: 50px;
+      }
     }
+  }
 }
-.bg-why{
-    background-color: var(--whitesmoke);
+
+.slides-navigation {
+  display: none;
 }
 //========================== BANNER END =====================================
 
 //====================== WHY CHOOSE US START =================================
 .bg-why{
+  background-color: var(--whitesmoke);
     .container{
         position: relative;
         z-index: 1;
@@ -144,6 +168,10 @@
                     }
                 }
                 .content{
+                  font-family: "Lato", sans-serif;
+                  .title{
+                    text-transform: capitalize;
+                  }
                     p{
                         font-size: 12px;
                     }
@@ -185,32 +213,28 @@
 .agri-dhan-vikas {
     padding: 0 60px 60px 20px;
     background-color: var(--whitesmoke);
-  
     .container {
       max-width: 1200px;
       margin: 0 auto;
     }
     .section-title {
       text-align: center;
-      font-size: 48px;
+      font-size: 60px;
       color: var(--lightgreen);
-      font-weight: 300;
+      font-family: "Lato", sans-serif;
+      font-weight: 500;
       margin-bottom: 50px;
     }
-  
     .cards-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 30px;
-  
       @media (max-width: 992px) {
         grid-template-columns: repeat(2, 1fr);
       }
-  
       @media (max-width: 600px) {
         grid-template-columns: 1fr;
       }
-  
       .card {
         display: flex;
         flex-direction: column;
@@ -229,21 +253,22 @@
         }
   
         .card-content {
+          width:90%;
           display: flex;
           flex-direction: column;
           justify-content: flex-start;
           flex: 0.43;
-  
           h3 {
+            font-family: "Lato", sans-serif;
             font-size: 15px;
             font-weight: 600;
             color: var(--jetgray);
             margin-bottom: 15px;
           }
-  
           p {
+            font-family: "Lato", sans-serif;
             font-size: 14px;
-            color: var(--gray);
+            color: var(--jetgray);
             line-height: 1.6;
             margin-bottom: 20px;
             flex-grow: 0;
@@ -323,11 +348,13 @@
             margin-top: 50px;
         }
         h2 {
+          font-family: "Lato", sans-serif;
           font-size: 28px;
           font-weight: 600;
-          margin-bottom: 0;
+          margin-bottom: 5px;
         } 
        p {
+        font-family: "Lato", sans-serif;
           font-size: 13px;
           line-height: 1.6;
         }
@@ -342,12 +369,14 @@
     }
   
       h4 {
+        font-family: "Lato", sans-serif;
         font-size: 14px;
         margin-bottom: 5px;
         font-weight: 200;
       }
   
       h2 {
+        font-family: "Lato", sans-serif;
         font-size: 22px;
         font-weight: 500;
         margin-bottom: 20px;
@@ -396,14 +425,15 @@
 //=========================== PRODUCT START =================================
 .product-section {
     text-align: center;
-    padding: 60px 20px; 
+    padding: 40px 20px; 
     .container{
         max-width: 1200px;
         
     h2 {
-        font-size: 48px;
+       font-family: "Lato", sans-serif;
+        font-size: 60px;
         color: var(--lightgreen);
-        font-weight: 300;
+        font-weight: 500;
         margin-bottom: 40px;
     }
 
@@ -424,22 +454,24 @@
         text-align: left;
 
         img {
-        width: 100%;
-        max-height: 300px;
-        object-fit: contain;
-        margin-bottom: 10px;
+          width: 100%;
+          max-height: 300px;
+          object-fit: contain;
+          margin-bottom: 10px;
         }
 
         h3 {
-        font-size: 18px;
-        font-weight: 600;
-        margin-bottom: 10px;
-        line-height: 1.4;
+          font-family: "Lato", sans-serif;
+          font-size: 18px;
+          font-weight: 600;
+          margin-bottom: 10px;
+          line-height: 1.4;
         }
 
         .price {
-        font-size: 16px;
-        color: var(--jetgray);
+          font-family: "Lato", sans-serif;
+          font-size: 16px;
+          color: var(--jetgray);
 
         strong {
             font-weight: bold;
@@ -453,13 +485,14 @@
         }
 
         button {
-        background: var(--yellow);
-        color: var(--green);
-        font-weight: bold;
-        border: none;
-        padding: 0px 16px;
-        cursor: pointer;
-        font-size: 14px;
+          font-family: "Lato", sans-serif;
+          background: var(--yellow);
+          color: var(--green);
+          font-weight: bold;
+          border: none;
+          padding: 0px 16px;
+          cursor: pointer;
+          font-size: 14px;
         }
     }
 
@@ -498,8 +531,20 @@
 //========================= TESTIMONIAL START ================================
 .testimony{
     background-color: var(--whitesmoke);
+    p{
+      font-family: "Lato", sans-serif;
+    }
 }
 //========================= TESTIMONIAL END ==================================
+
+.blog{
+  .subheading {
+    font-family: 'Lato', sans-serif;
+  }
+  .body{
+      font-family: "Lato", sans-serif;
+  }
+}
 
 //========================= FOOTER LOGO START=================================
 .footer{
