--- a/public/website/css/custom.css
+++ b/public/website/css/custom.css
@@ -1,20 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-p, li, a, h1, h2, h3 {
+p,
+li,
+a,
+h1,
+h2,
+h3 {
   font-family: "Lato", sans-serif !important;
 }
 
 :root {
-  --black:#000;
-  --white:#fff;
-  --whitesmoke:#f9f9f9;
+  --black: #000;
+  --white: #fff;
+  --whitesmoke: #f9f9f9;
   --green: #26b24b;
   --primary-green: #27bd4f;
-  --lightgreen:#68b02b;
-  --darkgreen:#208a3c;
-  --gray:gray;
-  --lightgray:#e8e8e8;
-  --jetgray:#333;
-  --teagreen:#E4F0CF;
+  --lightgreen: #68b02b;
+  --darkgreen: #208a3c;
+  --gray: gray;
+  --lightgray: #e8e8e8;
+  --jetgray: #333;
+  --teagreen: #E4F0CF;
   --yellow: #f6e13a;
 }
 
@@ -73,15 +78,18 @@ p, li, a, h1, h2, h3 {
   padding-left: 0;
   padding-right: 0;
 }
-.header .navbar .container .navbar-collapse .navbar-right, .header .navbar .container .navbar-collapse li {
+.header .navbar .container .navbar-collapse .navbar-right,
+.header .navbar .container .navbar-collapse li {
   margin-right: 0;
 }
 @media (max-width: 1200px) {
-  .header .navbar .container .navbar-collapse .navbar-right, .header .navbar .container .navbar-collapse li {
+  .header .navbar .container .navbar-collapse .navbar-right,
+  .header .navbar .container .navbar-collapse li {
     display: none;
   }
 }
-.header .navbar .container .navbar-collapse .navbar-right a, .header .navbar .container .navbar-collapse li a {
+.header .navbar .container .navbar-collapse .navbar-right a,
+.header .navbar .container .navbar-collapse li a {
   color: var(--gray) !important;
 }
 
@@ -514,4 +522,249 @@ p, li, a, h1, h2, h3 {
 
 .footer .footer-item .logo-bottom {
   width: 200px !important;
+}
+
+.gallery {
+  background-color: var(--teagreen);
+}
+.gallery .container {
+  text-align: center;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+  padding-bottom: 50px;
+}
+.gallery .container h2 {
+  font-family: "Lato", sans-serif;
+  font-size: 50px;
+  color: var(--green);
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+.gallery .container p {
+  font-family: "Lato", sans-serif;
+  color: var(--jetgray);
+  font-size: 18x;
+  margin-bottom: 30px;
+}
+.gallery .container .tabs {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 40px;
+}
+.gallery .container .tabs .tab {
+  padding: 0.6rem 1.4rem;
+  background: var(--white);
+  border: none;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+.gallery .container .tabs .tab.active {
+  background: var(--darkgreen);
+  color: var(--white);
+  transform: scale(1.05);
+}
+.gallery .container .tabs .tab:hover {
+  background: var(--darkgreen);
+  color: var(--white);
+}
+.gallery .container .media-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 350px;
+  gap: 1rem;
+}
+@media (max-width: 724px) {
+  .gallery .container .media-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 490px) {
+  .gallery .container .media-grid {
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    gap: 1rem;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 1rem;
+  }
+}
+.gallery .container .media-grid .media-item {
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+@media (max-width: 490px) {
+  .gallery .container .media-grid .media-item {
+    flex: 0 0 auto;
+    width: 80%;
+    scroll-snap-align: start;
+  }
+}
+.gallery .container .media-grid .media-item img,
+.gallery .container .media-grid .media-item video {
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+.gallery .container .media-grid .media-item:hover {
+  transform: scale(1.02);
+}
+.gallery .container .media-grid .media-item.span-2 {
+  grid-column: span 2;
+}
+
+.media-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+.media-modal.active {
+  display: flex;
+}
+.media-modal .modal-content {
+  position: relative;
+  max-width: 80vw;
+  max-height: 80vh;
+}
+.media-modal .modal-content img,
+.media-modal .modal-content video {
+  max-height: 60vh;
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  display: block;
+}
+.media-modal .modal-content .close-btn {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  font-size: 2rem;
+  color: #fff;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+@media (max-width: 768px) {
+  .media-modal .modal-content {
+    max-width: 95vw;
+    max-height: 80vh;
+  }
+  .media-modal .modal-content img,
+  .media-modal .modal-content video {
+    max-height: 50vh;
+  }
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.85);
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  transition: opacity 0.3s ease;
+}
+.modal.active {
+  display: flex;
+}
+.modal .modal-content {
+  position: relative;
+  max-width: 80%;
+  max-height: 90%;
+  background: transparent;
+}
+.modal .modal-content img {
+  max-height: 90vh;
+  width: auto;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+}
+.modal .modal-content .close-btn {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  background: none;
+  border: none;
+  transition: transform 0.2s;
+}
+.modal .modal-content .close-btn:hover {
+  transform: scale(1.2);
+}
+
+@media (max-width: 768px) {
+  .modal .modal-content img {
+    max-height: 60vh;
+  }
+}
+.download .tab {
+  color: var(--jetgray);
+  font-size: 17px;
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+  background: transparent !important;
+  border-radius: 0 !important;
+}
+.download .tab.active {
+  border-bottom: 1.5px solid var(--darkgreen) !important;
+  color: var(--green) !important;
+}
+.download .tab:hover {
+  color: var(--green) !important;
+}
+.download .media-grid {
+  grid-template-columns: repeat(3, 1fr) !important;
+  grid-auto-rows: 450px !important;
+}
+@media (max-width: 995px) {
+  .download .media-grid {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media (max-width: 768px) {
+  .download .media-grid {
+    display: flex !important;
+    flex-direction: row !important;
+    overflow-x: auto !important;
+    gap: 1rem !important;
+    scroll-snap-type: x mandatory !important;
+    padding-bottom: 1rem !important;
+  }
+}
+@media (max-width: 768px) {
+  .download .media-grid .media-item {
+    flex: 0 0 auto !important;
+    width: 80% !important;
+    scroll-snap-align: start !important;
+  }
+}
+
+.loader {
+  background-image: url(../images/Preloader.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }/*# sourceMappingURL=custom.css.map */
