--- a/public/website/css/ss-custom.css
+++ b/public/website/css/ss-custom.css
@@ -231,4 +231,186 @@ Global Transfers Area CSS
 .view-more {
   padding-top: 10px;
   transition: 0.3s;
+}
+
+.topbar .fa-mobile::before {
+  font-size: 14px;
+}
+.topbar .info {
+  padding: 14px 0px !important;
+  align-items: center;
+}
+.topbar .info .topbar-content p {
+  margin: 0 !important;
+}
+
+.bg-why .icon1 img {
+  width: 150px !important;
+}
+@media (max-width: 991px) {
+  .bg-why .icon1 img {
+    width: 60px !important;
+  }
+}
+.bg-why .icon3 img {
+  width: 190px !important;
+}
+@media (max-width: 991px) {
+  .bg-why .icon3 img {
+    width: 60px !important;
+  }
+}
+.bg-why .content .rm-1 {
+  margin-top: 0px !important;
+}
+.bg-why .content p {
+  font-size: 14px !important;
+  line-height: 22px !important;
+}
+@media (min-width: 767px) {
+  .bg-why .content p {
+    min-height: 88px !important;
+  }
+}
+.bg-why .content .title {
+  margin-bottom: 2px !important;
+}
+@media (min-width: 767px) {
+  .bg-why .feature-box-8.style-2 {
+    padding: 30px 30px !important;
+  }
+}
+.bg-why .feature-box-8.style-2:hover .read-more {
+  color: #fff !important;
+}
+.bg-why .feature-box-8.style-2:hover .read-more span {
+  border-color: #fff !important;
+}
+.bg-why .feature-box-8.style-2:hover .icon1 img {
+  filter: brightness(0) invert(1) !important;
+}
+@media (min-width: 767px) and (max-width: 991px) {
+  .bg-why .feature-box-8.style-2 .body {
+    flex-direction: column;
+  }
+}
+@media (max-width: 767px) {
+  .bg-why .feature-box-8.style-2 {
+    border-bottom: 1px solid #e7e7e7;
+  }
+}
+@media (max-width: 767px) {
+  .bg-why .border-right {
+    border-color: transparent !important;
+  }
+}
+
+.agri-dhan-vikas .section-title, .product-section .container h2, .gallery .container h2 {
+  color: #7fc55d !important;
+  font-size: 54px !important;
+}
+
+.agri-dhan-vikas .cards-grid .card .card-content .read-more span {
+  width: 20px !important;
+  height: 20px !important;
+}
+
+.membership-section .membership-right h4 {
+  font-weight: 400 !important;
+}
+
+.membership-section .membership-right .contact-form button {
+  padding: 3px 30px !important;
+}
+
+.product-section .container .read-more a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: flex-end;
+}
+.product-section .container .read-more a span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px !important;
+  height: 20px !important;
+  padding-right: 0px !important;
+}
+
+.gallery {
+  background-color: #f8faf4 !important;
+}
+.gallery h2 {
+  padding-bottom: 20px;
+}
+.gallery p {
+  font-size: 18px;
+}
+.gallery .container .tabs .tab {
+  padding: 5px 50px !important;
+}
+.gallery .container .media-grid {
+  gap: 3rem !important;
+  padding-top: 40px;
+}
+.gallery .media-grid .media-item img, .gallery .media-grid .media-item video {
+  transition: transform 0.3s ease;
+}
+.gallery .media-grid .media-item:hover {
+  transform: none !important;
+  transition: transform 0.3s ease;
+}
+.gallery .media-grid .media-item:hover img, .gallery .media-grid .media-item:hover video {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
+
+.banner-sec {
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.banner-sec .overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.57);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.banner-sec h3 {
+  color: #fff;
+  font-size: 50px;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.about-page .reset-section-heading {
+  font-size: 36px;
+  line-height: 36px;
+  margin-bottom: 20px;
+}
+.about-page .pt-120 {
+  padding-top: 120px !important;
+}
+.about-page .vision-mission .box-icon-1 {
+  border: 1px solid rgba(129, 197, 93, 0.2196078431);
+  padding: 30px;
+}
+.about-page .vision-mission .box-icon-1 .icon {
+  float: none !important;
+}
+.about-page .vision-mission .box-icon-1 .body-content {
+  margin-left: 0 !important;
+}
+.about-page .vision-mission .box-icon-1 .title:after {
+  margin: 3% 0 !important;
+}
+.about-page .testimony {
+  margin-top: -120px !important;
 }/*# sourceMappingURL=ss-custom.css.map */
